--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <script src="lib/angular.min.js"></script>
 
     <script type="text/javascript" src="lib/angular-ui-utils/modules/event/event.js"></script>
-    <script type="text/javascript" src="lib/angular-ui-map/src/ui-map.js"></script>
+    <script type="text/javascript" src="lib/angular-ui-map/src/ui-map.min.js"></script>
 
     <script>
 
-        function onGoogleReady() {
-            angular.bootstrap(document.getElementById("map"), ['app.ui-map']);
+        function onGoogleReady(callback) {
+            angular.bootstrap(document.getElementById("map"), ['ui-map']);
         }
 
         var myAppModule = angular.module('app.ui-map', ['ui.map']);
     </script>
 
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA5Zhn0d70pprD2K2ogELhYwmJy_N32le4&sensor=false&callback=onGoogleReady">
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA5Zhn0d70pprD2K2ogELhYwmJy_N32le4&sensor=false">
     </script>
 
     <script src='src/controllers/controllers.js'></script>
@@ -38,10 +38,14 @@
         <p>{{greeting.text}}, World</p>
     </div>
 
-    <section id="map" ng-controller="MapCtrl" >
-        <div ui-map="myMap" ui-options="mapOptions" class="map-canvas"></div>
-    </section>
+    <!--<section id="map" ng-controller="MapCtrl" >-->
+        <!--<div ui-map="myMap" ui-options="mapOptions" class="map-canvas"></div>-->
+    <!--</section>-->
 
+    <div id="map_canvas" ui-map="myMap" class="map"
+         ui-event="{'map-click': 'addMarker($event, $params)', 'map-zoom_changed': 'setZoomMessage(myMap.getZoom())' }"
+         ui-options="mapOptions">
+    </div>
 
     <!--<div id='map-canvas' height='400' width='400'></div>-->
 
