Working on getting structure correct

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html ng-app='busbash'>
+<html ng-app='busBash'>
 <head>
     <!-- CSS -->
     <link rel='stylesheet' type="text/css" href="css/busbash.css" />
@@ -7,12 +7,22 @@
     <!-- Libaries -->
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA5Zhn0d70pprD2K2ogELhYwmJy_N32le4&sensor=false"></script>
     <script src="lib/angular.min.js"></script>
-    <script src="lib/angular-google-maps.js"></script>
+
+    <script src="src/service/LocationService.js"></script>
+    <script src='src/controllers/geolocation.js'></script>
+    <!--<script src='src/controllers/google-maps-controller.js'></script>-->
+    <script src="src/app.js"></script>
+
+
+    <!--<script src="lib/angular-google-maps.js"></script>-->
 
     <!-- Controllers -->
-    <script src='src/controllers/controllers.js'></script>
-    <script src='src/controllers/geolocation.js'></script>
-    <script src='src/controllers/google-maps-controller.js'></script>
+    <!--<script src='src/controllers/controllers.js'></script>-->
+
+
+
+    <!--Services -->
+    <!--<script src='src/service/LocationService.js'></script>-->
 
 </head>
 <body>
@@ -20,23 +30,23 @@
         <button ng-click='locateUserViaGPS()'>Use My Location</button>
     </div>
 
-    <div ng-controller='HelloController'>
-        <p>{{greeting.text}}, World</p>
-    </div>
+    <!--<div ng-controller='HelloController'>-->
+        <!--<p>{{greeting.text}}, World</p>-->
+    <!--</div>-->
 
-    <div ng-controller='GoogleMapsController'>
-        <div class="google-map"
-             center="position.coords"
-             zoom="zoomProperty"
-             markers="markersProperty"
-             latitude="clickedLatitudeProperty"
-             longitude="clickedLongitudeProperty"
-             mark-click="true"
-             draggable="true"
-             fit="false"
-             events="eventsProperty"
-             style="height: 400px; width: 100%">
-        </div>
-     </div>
+    <!--<div ng-controller='GoogleMapsController'>-->
+        <!--<div class="google-map"-->
+             <!--center="position.coords"-->
+             <!--zoom="zoomProperty"-->
+             <!--markers="markersProperty"-->
+             <!--latitude="clickedLatitudeProperty"-->
+             <!--longitude="clickedLongitudeProperty"-->
+             <!--mark-click="true"-->
+             <!--draggable="true"-->
+             <!--fit="false"-->
+             <!--events="eventsProperty"-->
+             <!--style="height: 400px; width: 400px">-->
+        <!--</div>-->
+     <!--</div>-->
 </body>
 </html>
