Continuing work on map

--- a/index.html
+++ b/index.html
@@ -36,18 +36,25 @@
     <!--</div>-->
 
     <div ng-controller='GoogleMapsController'>
-        <div class="google-map"
-             center="position.coords"
-             zoom="zoomProperty"
-             markers="markersProperty"
-             latitude="clickedLatitudeProperty"
-             longitude="clickedLongitudeProperty"
-             mark-click="true"
-             draggable="true"
-             fit="false"
-             events="eventsProperty"
-             style="height: 400px; width: 400px">
-        </div>
+
+        <p>{{greeting.text}}</p>
+
+        <google-map center="center" draggable="true" zoom="zoom" markers="markers" mark-click="true" style="height: 400px; width:400px;display:block; border:1px solid red;">
+
+        </google-map>
+
+        <!--<div class="google-map"-->
+             <!--center="position.coords"-->
+             <!--zoom="zoomProperty"-->
+             <!--markers="markersProperty"-->
+             <!--latitude="clickedLatitudeProperty"-->
+             <!--longitude="clickedLongitudeProperty"-->
+             <!--mark-click="true"-->
+             <!--draggable="true"-->
+             <!--fit="false"-->
+             <!--events="eventsProperty"-->
+             <!--style="height: 400px; width: 400px">-->
+        <!--</div>-->
      </div>
 </body>
 </html>
